# OpenMfxRemoteProxy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  messages.fbs  messages_generated.h  vcpkg.json
OpenMfxRemoteProxy/: CMakeLists.txt
OpenMfxRemoteProxy/common/: MfxProxyBroker.cpp  MfxProxyBroker.h  MfxProxyMessage.cpp  MfxProxyMessage.h
OpenMfxRemoteProxy/common/serialization/: MfxFlatbuffersBasicTypes.fbs  MfxFlatbuffersMessages.fbs  openmfx_remote_proxy_messages.fbs
OpenMfxRemoteProxy/host/: MfxProxyHost.cpp  MfxProxyHost.h  MfxProxyHostBroker.cpp  MfxProxyHostBroker.h  remote_proxy_host.cpp
OpenMfxRemoteProxy/plugin/: MfxProxyBroker.cpp  MfxProxyBroker.h  MfxProxyEffect.cpp  MfxProxyEffect.h  MfxProxyPlugin.cpp  MfxProxyPlugin.h  MfxProxyPluginBroker.cpp  MfxProxyPluginBroker.h  remote_proxy_plugin.cpp
OpenMfxRemoteProxy/test/: dummy_host.cpp
include/flatbuffers/: flexbuffers.h  idl.h  reflection_generated.h
include/flatbuffers/pch/: flatc_pch.h  pch.h
python_mockup/: README.md  main.py  proxy_host.py  proxy_lib.py  proxy_plugin.py  requirements.txt  simple.py
